[package]
name = "eth-vanity"
description = "A tool to generate Ethereum vanity addresses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
criterion = "0.5.1"
rayon = "1.8.0"
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"

[[bench]]
name = "benchmark"
harness = false
